# slimcontroller

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  admin.html  index.html
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  styles.css
src/: main.rs
templates/: styles.html
templates/admin/: admin.html  script.html
templates/index/: index.html  script.html
