[package]
name = "slimcontroller"
version = "1.2.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = "1.41.1"
redis = { version = "0.27.5", features = ["tokio-comp"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
serde = { version = "1.0.215", features = ["derive"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
rand = "0.8.5"
askama_axum = "0.4.0"
askama = "0.12.1"
